--- a/app/assets/stylesheets/notes/listing.css
+++ b/app/assets/stylesheets/notes/listing.css
@@ -49,7 +49,12 @@
 
 
 
-.listing-wrapper .bootstrap .btn-default{margin-right:10px;  margin-top:18%;float:right;font-size: 20px;}
+.listing-wrapper .bootstrap .btn-default{
+	margin-right:10px; 
+	 margin-top:18%;
+	 float:right;
+	 font-size: 20px;
+	}
 
 
 
@@ -77,9 +82,7 @@
 .provider-listings ul li{
 	background-color:#fff;
 	margin-top:30px;
-margin-left: -22%;
-
-	
+    margin-left: -22%;
 	width:130%;
 	border-radius:5px;
 	margin-bottom:60px;
@@ -119,8 +122,7 @@ margin-left: -22%;
 .provider-listings ul li{
 	
 	margin-top:30px;
-margin-left: -30%;
-
+    margin-left: -30%;
 	width:140%;
 	border-radius:5px;
 	margin-bottom:30px;
@@ -131,11 +133,13 @@ margin-left: -30%;
 
 .listing-wrapper .bootstrap .btn-default{
 	margin-right:3%; 
-	 margin-top:8%;
-
-	 font-size: 9px;
+	margin-top:8%;
+	font-size: 9px;
 	}
 }
+
+
+
 
 
 
