--- a/app/assets/stylesheets/notes/show.css
+++ b/app/assets/stylesheets/notes/show.css
@@ -95,9 +95,6 @@
 	margin-top:3%;
 	 }
 
-.provider_service_pictures,.reviews_providers,.rulesfromprovider{
-	float:left;
-}
 
 .provider_wrapper h2{
   font-weight: normal;
@@ -156,6 +153,10 @@
 	margin-left:14%;
 	 }
 
+.provider_service_pictures,.reviews_providers,.rulesfromprovider{
+	float:left;
+}
+
 .main-image{
 	background-color:gray;
 	height:360px;
@@ -180,6 +181,7 @@
 	border-bottom:none;
 
 }
+
 
 .sample_03{
 	width: 80%;
@@ -232,10 +234,10 @@ padding-bottom: 10px;
 	font-weight:700;
 	text-decoration:none;
 	display:block;
-	text-align:left;
-	padding:6px;
-padding-left: 25px;
-	width:60%; 
+	text-align:center;
+	padding:9px 0px;
+
+	width:100%; 
 	border-radius:3%;
 	 }
 
@@ -250,7 +252,7 @@ padding-left: 25px;
 float:left;
 	border-radius:3%;
 	 margin-top:0%; 
-	 margin-left:13%;
+	 margin-left:0%;
 	}
 
 .provider-introduction .shadow_btn:active{
@@ -261,7 +263,10 @@ float:left;
 
 .message_reservetion .bootstrap .btn-default{
 	float:left;
-	margin:0px 0px; }
+	margin-top: 0%;
+	margin-left: -18%;
+	margin-bottom:5%; 
+}
 
 
 
@@ -301,15 +306,15 @@ float:left;
 	text-decoration:none;
 	display:block;
 	text-align:center;
-padding-right: 20px;
-	width:60%; 
+padding: 10px 0px;
+	width:100%; 
 	border-radius:3%;
 	 }
 
 
 .provider-introduction .shadow_btn{
 
-	 margin-left:8%;
+	 margin-left:0%;
 	}
 
 .message_reservetion .bootstrap .btn-default{
