--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <head>
 
-	<title>Seekle（シークル）｜ サービス検索・予約</title>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
+	<title>Seekle（シークル）｜ 無料で簡単にサービス検索・予約</title>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
 <%= favicon_link_tag('favicon.ico') %>
 </head>
 
