--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -3,6 +3,8 @@
 
 	<title>Seekle（シークル）｜ 無料で簡単にサービス検索・予約</title>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
 <%= favicon_link_tag('favicon.ico') %>
+<meta name=”description” content=”ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各業者選びに失敗しない！あなたの必要とするサービスをオンラインで予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]”>
+
 </head>
 
 <script src='https://cdn.slaask.com/chat.js'></script>
