--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -58,45 +58,80 @@
      </td>
    </tr> 
 
+ <tr>
+     <th> <p><%= f.label Note.human_attribute_name 'キャッチコピー' %><span class="form-label required">必須</span> </p></th>
+     <td>
+      <%= f.text_field :catchcopy, class: 'form-control',placeholder:"このサービスの売りをお客様にアピールするキャッチコピーをつけましょう" %>
 
+    </td>
+  </tr>
 
-<tr>
- <th> <p>キャッチコピー<span class="form-label required">必須</span> </p></th>
- <td>
-  <%= f.text_area :catchcopy, class: 'content-area',placeholder:"このサービスならではの取り柄をアピールしましょう" %>
-</td>
+  <tr>
+   <th> <p><%= f.label Note.human_attribute_name 'セールスポイント' %><span class="form-label required">必須</span></p></th>
+   <td>
+   
+<div class="middleform">
+ <textarea class="form-control"  name="note[salespoint]" id="note_salespoint">
+《-----------》
+◆
+◆
+◆
+◆
+
+</textarea>
+</div>
+
+  </td>
 </tr>
 
 
+
 <tr>
- <th> <p>セールスポイント<span class="form-label required">必須</span></p></th>
- <td>
-  <%= f.text_field :salespoint, class: 'form-control', placeholder:"お客様にとって嬉しいポイントをアピールしましょう具体的にアピールしましょう" %>
-</td>
+ <th> <p><%= f.label Note.human_attribute_name '詳しいサービス内容' %><span class="form-label required">必須</span> </p></th>
+  <td>
+
+ <div class="largeform">
+ <textarea class="form-control" placeholder="必須のサービス内容に加えて、お客様に提供しているサービスや特典をアピールして他者と差別化を図りましょう" name="note[content]" id="note_content" >
+</textarea>
+</div>
+
+  </td>
+</tr>
+
+<tr>
+ <th> <p><%= f.label Note.human_attribute_name 'お客様へのお願い' %><span class="form-label required">必須</span> </p></th>
+  <td>
+   <div class="middleform">
+ <textarea class="form-control"  name="note[rule]" id="note_rule">
+・追加料金が発生する場合には事前にお知らせします。
+・
+・
+</textarea>
+</div>
+  </td>
 </tr>
 
 
 
-<tr>
- <th> <p>お客様へのお願い<span class="form-label required">必須</span></p></th>
- <td>
-  <%= f.text_area :rule, class: 'content-area' %>
-</td>
-</tr>
+
+
+
+
+
 
 <tr>
- <th> <p>変更とキャンセル<span class="form-label optional">任意</span></p></th>
- <td>
-  <%= f.text_area :cancelrule, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
+ <th> <p><%= f.label Note.human_attribute_name '変更とキャンセル' %><span class="form-label optional">任意</span></p></th>
+  <td>
+     <div class="middleform">
+  <textarea class="form-control" placeholder="あなたのサービスについて詳しく説明しよう" name="note[cancelrule]" id="note_cancelrule">
+予約成立後の変更・キャンセルは、作業の6日前まで承ります。
+期限を過ぎてのキャンセルは、5日前から2日前までは予約金額の25%、前日までは50%、それ以降は100%のキャンセル料が発生することがございますので、ご了承ください。</textarea>
+</div>
 </td>
+  </td>
 </tr>
 
-<tr>
- <th> <p>詳しいサービスの内容<span class="form-label optional">任意</span></p></th>
- <td>
-  <%= f.text_area :content, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
-</td>
-</tr>
+
 
 <tr>
  <th> <p>写真<span class="form-label required">必須</span></p></th>
