--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
       <ul>
         <li><a href='/users'>マイページ</a></li>
          <li><a href='/mailbox/inbox'>メッセージ
-        <li><a href='/users/reservations'>取引履歴</a></li>
+        <li><a href='/reservations/list'>取引履歴</a></li>
         <li><a href='/users/edit'>基本設定</a></li>
        
       </ul>
