--- a/app/views/reservations/detail.html.erb
+++ b/app/views/reservations/detail.html.erb
@@ -12,6 +12,8 @@
   </div>
 </div>
 
+<%= render 'home/header/dashboardhead' %>
+
 <div class="customer_reservation_provider_info">
 <h4><%= link_to @note.title,  note_path(@note) %></h4>
 <%= @note.price%>円 （税込）
