--- a/app/views/home/header/_dashboardhead.html
+++ b/app/views/home/header/_dashboardhead.html
@@ -38,14 +38,12 @@
 </header>
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="//http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
 (function($) {
     $(function() {
         var $header = $('#top-head');
-        var s=document.createElement('script');
-        s.setAttribute('src','http://www.seekle.jp');
-        s.setAttribute('type','text/javascript');
+
         // Nav Fixed
         $(window).scroll(function() {
             if ($(window).scrollTop() > 350) {
@@ -61,5 +59,6 @@
     });
 })(jQuery);
 </script>
+
 
 
