--- a/app/views/home/header/_dashboardhead.html
+++ b/app/views/home/header/_dashboardhead.html
@@ -34,11 +34,10 @@
 
 
 
-
 </header>
 
 
-<script src="//http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="//https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
 (function($) {
     $(function() {
