--- a/app/views/home/header/_dashboardhead.html
+++ b/app/views/home/header/_dashboardhead.html
@@ -37,7 +37,7 @@
 </header>
 
 
-<script src="//https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
 (function($) {
     $(function() {
