--- a/app/assets/stylesheets/notes/reservation.css
+++ b/app/assets/stylesheets/notes/reservation.css
@@ -1,24 +1,31 @@
 .reservation-form{
-	   width:70%;
+	   width:72.3%;
 	margin-top:5%;
-	 margin-left:15%; 
+	margin-left:13.8%;
 	 margin-bottom: 7%
   
 	}
 
+
 .reservation-form h1{
+
 font-weight: 400;
 font-size: 20px;
+margin-bottom: 30px;
   
 	}
 
 .reservation-confirm{
+		   width:100%;
 	margin-top: -4%;
-	margin-left: 1%;
+margin-left: 3.8%;
+	
 }
 
 .complete_reservation_wrapper{margin: 10% 10%;text-align: center;}
-.complete_reservation_wrapper h1{font-weight: normal;}
+.complete_reservation_wrapper h1{font-weight: normal;
+margin-bottom: 30px;
+}
 
 
 .reservation-confirm .bootstrap .shadow_btn{
@@ -65,6 +72,7 @@ width:100%;
 .before_reservation_explain h1{
 font-size:17px;
 	font-weight: normal;
+	margin-bottom: 30px;
 }
 
 .before_reservation_explain h3{
