--- a/app/assets/stylesheets/users/index.css
+++ b/app/assets/stylesheets/users/index.css
@@ -1,7 +1,7 @@
 
 .mypage-all_wrapper{
 	padding-top:18px;
-
+margin-left:13.8%;
 	padding-bottom: 60px;
 }
 
@@ -11,7 +11,7 @@
 
 .mypage-all_wrapper h1{
 	float:left;
-	margin-left: 180px; 
+margin-bottom: 30px;
 	font-weight: 500; 
 	 line-height: 1.3em; 
 	 width:56%; 
@@ -24,7 +24,7 @@
 
 
 .notification_user{
-	clear:both;margin-left: 180px; 
+	clear:both;
 }
 
 .notification_header{
@@ -62,12 +62,20 @@ border-bottom: 2px solid	#FDF5E6;
 
 
 
+
 /* ipad タブレットのレスポンシブデザイン */
 @media (max-width: 767px) {
 
+
+.mypage-all_wrapper{
+margin-left:0%;
+
+}
+
+
 .mypage-all_wrapper h1{
 	float:left;
-	margin-left: 10px; 
+	
 
 	font-weight: 500; 
 	 line-height: 1.3em; 
@@ -82,7 +90,7 @@ border-bottom: 2px solid	#FDF5E6;
 
 .notification_user{
 	clear:both;
-	margin-left: 0px; 
+
 }
 
 
@@ -105,7 +113,7 @@ display: none;
 	}
 
 	.notification_content {
-	margin-left: 18px;
+	
 	
 	}
 
@@ -122,7 +130,7 @@ display: none;
 
 .mypage-all_wrapper h1{
 		float:left;
-	margin-left: 180px; 
+
 	font-weight: 500; 
 	 line-height: 1.3em; 
 	 width:56%; 
