--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -1,19 +1,17 @@
-
      <%= render 'category/header' %>
 
+    <%= render 'category/responsivemenuvar' %>
+<%= render 'home/header/dashboardhead' %>
+<div class="home-all-wrapper">   <div class="top_home_page">
 
-<div class="home-all-wrapper">
-<div class="home-little clearfix">
-   <div class="top_home_page">
+
     <h1>イベント</h1>
      <h3>あなたの暮らしを変えるSeekleでの住まいサービス</h3>
    </div>
 
-
-
-  <div class="home-category-wrapper">
+<div class="categories">
   <h2>イベント ジャンル</h2>
-   <div class="categories">
+
      <ul>
        <div class="bootstrap">
          <li><div class="panel panel-default">
@@ -30,7 +28,7 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "結婚司会","/notes/event" %></h3>
+    <h3 class="panel-title"><%= link_to "結婚式","/notes/event" %></h3>
   </div>
           <%= link_to image_tag( 'event/bouquet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
@@ -93,10 +91,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "フェイスペインティング","/notes/event" %></h3>
+     <h3 class="panel-title"><%= link_to "衣装レンタル","/notes/event" %></h3>
      </div>
         
-  <%= link_to image_tag('event/facepaint.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
+  <%= link_to image_tag('event/dresses.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
