--- a/app/views/category/health.html.erb
+++ b/app/views/category/health.html.erb
@@ -1,18 +1,19 @@
      <%= render 'category/header' %>
-
-
+     
+    <%= render 'category/responsivemenuvar' %>
+<%= render 'home/header/dashboardhead' %>
 <div class="home-all-wrapper">
-
-<div class="home-little clearfix">
    <div class="top_home_page">
+
+
     <h1>健康</h1>
      <h3>あなたの健康を支えるSeekleでの健康サービス</h3>
    </div>
 
-  <div class="home-category-wrapper">
+   <div class="categories">
 
    <h2>健康 ジャンル</h2>
-   <div class="categories">
+
      <ul>
 
  <div class="bootstrap">
