--- a/app/views/category/housing.html.erb
+++ b/app/views/category/housing.html.erb
@@ -1,8 +1,10 @@
-     <%= render 'category/header' %>
-
+      <%= render 'category/header' %>
+     
+    <%= render 'category/responsivemenuvar' %>
+<%= render 'home/header/dashboardhead' %>
 <div class="home-all-wrapper">
 
-<div class="home-little clearfix">
+
    <div class="top_home_page">
 
 
@@ -11,11 +13,13 @@
 
    </div>
 
-  <div class="home-category-wrapper">
+
+
+   <div class="categories">
 
   <h2>住まい ジャンル</h2>
 
-   <div class="categories">
+
     <ul>
       <div class="bootstrap">
        <li><div class="panel panel-default">
@@ -138,11 +142,14 @@
 
     </div>
   </li>
+
+
+
  </ul>
-  </div>
 
 
-  </div>
+
+
  </div>
 
 
