--- a/app/views/category/lesson.html.erb
+++ b/app/views/category/lesson.html.erb
@@ -1,12 +1,10 @@
-     <%= render 'category/header' %>
-
-
-
+      <%= render 'category/header' %>
+     
+    <%= render 'category/responsivemenuvar' %>
+<%= render 'home/header/dashboardhead' %>
 <div class="home-all-wrapper">
 
-<div class="home-little clearfix">
    <div class="top_home_page">
-
 
     <h1>習い事</h1>
      <h3>あなたの暮らしを変えるSeekleでの住まいサービス</h3>
@@ -15,15 +13,10 @@
    </div>
 
 
-
-  <div class="home-category-wrapper">
+   <div class="categories">
 
   <h2>習い事 ジャンル</h2>
 
-
-
-
-   <div class="categories">
      <ul>
 
 
