--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -25,8 +25,7 @@
 
  <div class="company_service_mission">
   <h2>サービス提供者の方々</h2>
-  <p>「はやく辞めたい」「自分はこんなことしたいなんて思ってない」と言いながらも毎日会社に通う日々。 <br/>
-    本当にしたいことを 始めようと思っている方 / 既に始めている 方々のために主に集客、レビュー制度、ホームページを作る必要なく広告塔となり、Seekleを通してサポートを努め、日本のビジネスインフラを整備していきます。</p>
+  <p>独立した方、個人事業者の方をメインに主に集客、口コミ集めなど、Seekleを通してサポートを努め、ホームページを作る必要なく広告塔となり、ビジネスを始めやすい環境を創り、日本のビジネスインフラを整備していきます。</p>
   </div>
 
 </div>
@@ -90,8 +89,8 @@
    </div>
 
    <div class="company_service_mission">
-    <h2>始まったばかりのサービスを共に伸ばしていく、会社の立ち上げに興味ある方を募集！</h2>
-    <p>会社にいるのは現在、代表の私だけです。本当に初期のメンバーとしてジョインしてくださる方を募集しています！
+    <h2>始まったばかりのサービスを一緒に伸ばしていくメンバーを募集！</h2>
+    <p>会社にいるのは現在代表の私だけです。ご興味がある方はseekle.info@gmail.comまでご連絡お願いします
    </p>
  </div>
 </div>
