--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -17,18 +17,46 @@
 
 
 
- <div id="fade-in2" class="dropmenu">
+<div class="web-menu-var">
+ <div class="dropmenu">
   <div class="wrapper">
-   <ul>
+ 
+    <li><a href="/category/housing"><i class="fa fa-home fa-fw"></i>住まい</a></li>
+    <li><a href="/category/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
+    <li><a href="/category/lesson"><i class="fa fa-book fa-fw"></i>習い事</a></li>
+    <li><a href="/category/health"><i class="fa fa-heart fa-fw"></i>健康</a></li>
+    <li><a href="/category/others"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
+
+
+  </div>
+ </div>
+
+</div>
+
+
+
+<div class="responsive-menu-var">
+
+ <div class="dropmenu">
+  <div class="wrapper">
+  <nav id="scroll-menu">
+ <ul class="scroll-menu-inner">
     <li><a href="/category/housing"><i class="fa fa-home fa-fw"></i>住まい</a></li>
     <li><a href="/category/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
     <li><a href="/category/lesson"><i class="fa fa-book fa-fw"></i>習い事</a></li>
     <li><a href="/category/health"><i class="fa fa-heart fa-fw"></i>健康</a></li>
     <li><a href="/category/others"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
    </ul>
+</nav>
+
   </div>
  </div>
- 
+
+
+</div>
+
+
+
 
  <div class="explain-seekle-wrapper">
   <div class="container">
